--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="navbar">
         <div class="sm">
             <p class="heading">Task Tracker</p>
-            <button id="menu" onclick="unhide()"><img src="navbar/menu.png" alt="" width="20px" height="20px"></button>
-            <button id="close" onclick="hide()"><img src="navbar/close.png" alt="" width="18px" height="18px"></button>
+            <button id="menu" onclick="unhide()"><img src="menu.png" alt="" width="20px" height="20px"></button>
+            <button id="close" onclick="hide()"><img src="close.png" alt="" width="18px" height="18px"></button>
         </div>
         <nav id="nav">
             <a href="" class="active vertical">Completed task</a>
